--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "s1nb2/omnipay-paygate",
+    "name": "mvnrsa/omnipay-paygate",
     "version": "2.0.1",
     "type": "library",
     "autoload": {
